--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,11 @@
 version: "3.8"
 
 services:
-  web:
+  app:
     build: .
     ports:
-      - "3000:3000"
+      - "3000:3000" # frontend
+      - "4000:4000" # backend
     volumes:
       - .:/app
       - /app/node_modules
