--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "ctt-test",
   "version": "1.0.0",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve --config webpack/webpack.config.js",
-    "build": "webpack --config webpack/webpack.config.js",
-    "test": "jest"
+    "start": "webpack serve --config webpack/webpack.config.mjs",
+    "build": "webpack --config webpack/webpack.config.mjs",
+    "start:api": "node server/server.js",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "start:docker": "docker-compose up --build"
   },
   "keywords": [],
   "author": "",
@@ -27,6 +31,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^29.5.14",
+    "@types/node-fetch": "^2.6.12",
     "@types/react": "^19.1.6",
     "@types/react-dom": "^19.1.5",
     "@types/react-redux": "^7.1.34",
@@ -36,6 +41,7 @@
     "html-webpack-plugin": "^5.6.3",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^30.0.0-beta.3",
+    "node-fetch": "^2.7.0",
     "source-map-loader": "^5.0.0",
     "style-loader": "^4.0.0",
     "ts-jest": "^29.3.4",
